--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -25,6 +25,11 @@
 
         </ul>
       </header>
+{{#if error}}
+      <div id="notifications">
+      <p = "notification-message">{{error}}</p>
+      </div>
+{{/if}}
       {{{body}}}
     </div>
     <footer>@Cubicle: Exercise for Express.js and Handlebars</footer>
